--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Products</ion-title>
+    <ion-title>{{title}}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,7 +16,12 @@
 <ion-content>
     <ion-list>
         <ion-item *ngFor="let product of products" (click)="showDetails(product)"> 
-          <h2>{{product.Name}}</h2>
-        </ion-item>
+          <div class="list-image" item-start>
+              <img-loader class="tile-image" src="{{product.Image}}" useImg="true" spinner="false"></img-loader>
+            </div>
+            <div class="list-name">{{product.Name}}</div>
+            <div class="list-subtitle">{{product.SubTitle}}</div>
+            <div class="list-price">{{product.Price}}</div>
+          </ion-item>
       </ion-list>
 </ion-content>
